# client_server

./: .gitignore  CMakeLists.txt  client_server.sln
ClientApplication/: CMakeLists.txt
ClientApplication(Program_1)/: CMakeLists.txt
ClientApplication(Program_1)/include/: ClientAppConfig.hpp  ClientApplication.hpp
ClientApplication(Program_1)/libs/TcpClient/: CMakeLists.txt
ClientApplication(Program_1)/libs/TcpClient/include/: TcpClient.hpp
ClientApplication(Program_1)/libs/TcpClient/src/: TcpClient.cpp
ClientApplication(Program_1)/src/: ClientAppConfig.cpp  ClientApplication.cpp  main.cpp
ClientApplication(Program_1)/src/NetworkTrafficProcessor/: NetworkTrafficProcessor.cpp  NetworkTrafficProcessor.hpp
ClientApplication(Program_1)/src/UserInputProcessor/: UserInputProcessor.cpp  UserInputProcessor.hpp
ClientApplication/include/: ClientAppConfig.hpp  ClientApplication.hpp  NetworkProcessor.hpp  UserInputProcessor.hpp
ClientApplication/libs/TcpClient/: CMakeLists.txt
ClientApplication/libs/TcpClient/include/: TcpClient.hpp
ClientApplication/libs/TcpClient/src/: TcpClient.cpp
ClientApplication/src/: ClientAppConfig.cpp  ClientApplication.cpp  NetworkProcessor.cpp  UserInputProcessor.cpp  main.cpp
ClientApplication/src/NetworkTrafficProcessor/: NetworkTrafficProcessor.cpp  NetworkTrafficProcessor.hpp
ClientApplication/src/UserInputProcessor/: UserInputProcessor.cpp  UserInputProcessor.hpp
Message/: CMakeLists.txt
Message/include/: Message.hpp
Message/src/: Message.cpp
Packet/: CMakeLists.txt
Packet/include/: Packet.hpp
Packet/src/: Packet.cpp
ProcSignalGuard/: CMakeLists.txt
ProcSignalGuard/include/: ProcSignalGuard.hpp
ProcSignalGuard/src/: ProcSignalGuard.cpp
ServerApplication/: CMakeLists.txt
ServerApplication(Program_2)/: CMakeLists.txt
ServerApplication(Program_2)/include/: ServerAppConfig.hpp  ServerApplication.hpp
ServerApplication(Program_2)/libs/TcpServer/: CMakeLists.txt
ServerApplication(Program_2)/libs/TcpServer/include/: TcpServer.hpp
ServerApplication(Program_2)/libs/TcpServer/src/: ClientSession.cpp  ClientSession.hpp  ClientSessionGroup.cpp  ClientSessionGroup.hpp  TcpServer.cpp
ServerApplication(Program_2)/src/: ServerAppConfig.cpp  ServerApplication.cpp  main.cpp
ServerApplication/include/: ServerAppConfig.hpp  ServerApplication.hpp
ServerApplication/libs/TcpServer/: CMakeLists.txt
ServerApplication/libs/TcpServer/include/: ClientSession.hpp  TcpServer.hpp
ServerApplication/libs/TcpServer/src/: ClientSession.cpp  ClientSession.hpp  TcpServer.cpp  СlientSessionGroup.cpp  СlientSessionGroup.hpp
ServerApplication/src/: ServerAppConfig.cpp  ServerApplication.cpp  main.cpp
client/: CMakeLists.txt  ClientApplication.cpp  ClientApplication.hpp  ConnectionResponsible.cpp  ConnectionResponsible.hpp  MyClient.cpp  MyClient.hpp  TcpClient.hpp  client.cpp  client.vcxproj  client.vcxproj.filters  main.cpp
protocol/: packet.hpp
server/: TcpServer.cpp  packages.config  server.cpp  server.vcxproj  server.vcxproj.filters
